Formatting and minor clean ups

--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -91,20 +91,20 @@ To avoid momentary display
 ** Set up load paths early Provide the org-mode environment at once
 Because babel should not have any chance to load from anywhere else
 #+begin_src emacs-lisp :tangle thomasf-init.el
-(setq vendor-dir (concat dotfiles-dir "vendor/"))
-(setq notes-dir (file-truename "~/notes/"))
+  (setq vendor-dir (concat dotfiles-dir "vendor/"))
+  (setq notes-dir (file-truename "~/notes/"))
 
-(let ((default-directory vendor-dir))
-  (setq load-path
-        (append
-         (let ((load-path (copy-sequence load-path)))
-           (append
-            (copy-sequence (normal-top-level-add-to-load-path '(".")))
-            (normal-top-level-add-subdirs-to-load-path)))
-         load-path)))
-(setq org-modules '(org-bibtex org-docview org-id org-info org-jsinfo org-habit org-mew org-mhe org-vm org-wl org-w3m org-git-link org-velocity))
-(require 'cl)
-(require 'org-install)
+  (let ((default-directory vendor-dir))
+    (setq load-path
+          (append
+           (let ((load-path (copy-sequence load-path)))
+             (append
+              (copy-sequence (normal-top-level-add-to-load-path '(".")))
+              (normal-top-level-add-subdirs-to-load-path)))
+           load-path)))
+  (setq org-modules '(org-bibtex org-docview org-id org-info org-jsinfo org-habit org-mew org-mhe org-vm org-wl org-w3m org-git-link org-velocity))
+  (require 'cl)
+  (require 'org-install)
 #+end_src
 
 ** Load thomasf-init if it's not loaded already
@@ -118,15 +118,15 @@ this file and add that directory to the load path.
 
 Make sure that the init file is loaded.
 #+begin_src emacs-lisp
-(require 'thomasf-init)
+  (require 'thomasf-init)
 #+end_src
 
 * Startup
 ** Path variables and load paths
 Themes load paths
 #+begin_src emacs-lisp
-(setq themes-dir (concat dotfiles-dir "themes/"))
-(add-to-list 'custom-theme-load-path themes-dir)
+  (setq themes-dir (concat dotfiles-dir "themes/"))
+  (add-to-list 'custom-theme-load-path themes-dir)
 #+end_src
 ** Files that should not be version controlled should gather in their own directory
 #+begin_src emacs-lisp
@@ -149,8 +149,7 @@ Themes load paths
         backup-directory-alist (list (cons "." backup-dir))
         auto-save-file-name-transforms `((".*" ,autosave-dir t))
         custom-file (concat local-data-dir "custom-set-variables.el")
-        smex-save-file (concat local-data-dir "smex-items")
-        )
+        smex-save-file (concat local-data-dir "smex-items"))
 #+end_src
 ** Load package system
 #+begin_src emacs-lisp
@@ -162,13 +161,10 @@ Themes load paths
           ("marmalade"   . "http://marmalade-repo.org/packages/")))
   (package-initialize)
 #+end_src
-** Try to load private settings
+** Try to load private settings and customize variables
 #+begin_src emacs-lisp
-(load "~/.emacs-private" 'noerror 'nomessage)
-#+end_src
-** Load customize set variables
-#+begin_src emacs-lisp
-(load custom-file 'noerror 'nomessage)
+  (load "~/.emacs-private" 'noerror 'nomessage)
+  (load custom-file 'noerror 'nomessage)
 #+end_src
 ** Set up autoloads
 #+begin_src emacs-lisp
@@ -181,16 +177,14 @@ Themes load paths
   (autoload 'nyan-mode "nyan-mode" "Nyan mode" t)
   (autoload 'global-yascroll-bar-mode "yascroll" "Yascroll" t)
   (autoload 'artbollocks-mode "artbollocks-mode" "Artbollocks mode" t)
-
   (autoload 'haskell-align-imports "haskell-align-imports" "haskell-align-imports" t)
   (autoload 'haskell-navigate-imports "haskell-navigate-imports" "haskell-navigate-imports" t)
   (autoload 'haskell-sort-imports "haskell-sort-imports" "haskell-sort-imports" t)
   (load "go-mode-load")
   (load "haskell-site-file")
   (load "50magit")
-
 #+end_src
-** Require whats always wanted
+** Load whats always wanted
 #+begin_src emacs-lisp
 (require 'thomasf-org)
 (if window-system (require 'thomasf-gui))
@@ -218,19 +212,19 @@ New stuff, to want?
 * Common
 ** Use UTF8 as much as possible
 #+begin_src emacs-lisp
-(setq locale-coding-system 'utf-8)
-(set-terminal-coding-system 'utf-8)
-(set-keyboard-coding-system 'utf-8)
-(set-selection-coding-system 'utf-8)
-(prefer-coding-system 'utf-8)
-(set-language-environment "UTF-8")       ; prefer utf-8 for language settings
-(set-input-method nil)                   ; no funky input for normal editing;
-(setq read-quoted-char-radix 10)         ; use decimal, not octal
+  (setq locale-coding-system 'utf-8)
+  (set-terminal-coding-system 'utf-8)
+  (set-keyboard-coding-system 'utf-8)
+  (set-selection-coding-system 'utf-8)
+  (prefer-coding-system 'utf-8)
+  (set-language-environment "UTF-8")       ; prefer utf-8 for language settings
+  (set-input-method nil)                   ; no funky input for normal editing;
+  (setq read-quoted-char-radix 10)         ; use decimal, not octal
 #+end_src
 
 ** UI related settings
 #+begin_src emacs-lisp
-(global-font-lock-mode t)
+
 #+end_src
 ** Geographical settings
 #+begin_src emacs-lisp
@@ -250,7 +244,6 @@ What is what?
         ring-bell-function 'ignore
         visible-bell nil
         column-number-mode t
-        font-lock-maximum-decoration t
         transient-mark-mode t
         shift-select-mode nil
         delete-selection-mode nil
@@ -348,18 +341,15 @@ What is what?
                ("cancelled" :foreground ,green :slant italic :slant italic)
                ("flagged" :foreground ,red :slant italic :inverse-video t))))))
 
-
   (setq day-mode-theme 'thomasf-solarized-light
         night-mode-theme 'thomasf-solarized-dark)
   (load-theme day-mode-theme)
+  (setq font-lock-maximum-decoration t)
+  (global-font-lock-mode t)
   (require 'pretty-mode)
   (global-pretty-mode 1)
   ;;(nyan-mode 1)
   (global-yascroll-bar-mode 1)
-
-
-
-
 
 #+end_src
 
@@ -417,7 +407,7 @@ Current:
   (ac-flyspell-workaround)
 #+end_src
 
-** Load yasnippet
+** Yasnippet
 #+begin_src emacs-lisp
   (require 'dropdown-list)
   (require 'yasnippet)
@@ -439,7 +429,7 @@ Current:
  (add-hook 'before-save-hook 'delete-trailing-whitespace)
 #+end_src
 
-** TODO IDO
+** IDO
 #+begin_src emacs-lisp
   (setq  ido-enable-flex-matching t
          ido-use-filename-at-point nil
@@ -448,7 +438,7 @@ Current:
          ido-default-buffer-method 'selected-window)
   (ido-mode t)
   (ido-everywhere t)
-  (ido-ubiquitous)
+  (ido-ubiquitous-mode)
 #+end_src
 * Utility functions
 ** Insert file as org table at point
@@ -499,7 +489,6 @@ Current:
     (multi-occur
      (get-buffers-matching-mode major-mode)
      (car (occur-read-primary-args))))
-
 #+end_src
 ** Cycle ispell dictionaries
 #+begin_src emacs-lisp
@@ -541,12 +530,10 @@ Current:
           (save-buffers-kill-emacs))
       ;;close a child frame
       (delete-frame (selected-frame))))
-
-
 #+end_src
 ** Lorem ipsum paster
 #+begin_src emacs-lisp
-(defun lorem (paragraphs)
+  (defun lorem (paragraphs)
     "Inserts up to 5 paragraphs of lorem ipsum filler text."
     (interactive "nParagraphs: ")
     (let ((lorems '("Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enimad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
@@ -556,35 +543,32 @@ Current:
                     "\n\nPellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed vel neque a nibh tincidunt luctus id a eros. Curabitur leo odio, sodales id malesuada ac, commodo et augue. Aenean auctor justo a nulla lobortis ut tempor mauris mollis. Duis a purus consequat enim vestibulum pretium. Vestibulum diam urna, luctus at pulvinar sed, rhoncus id risus. Maecenas sit amet velit vitae libero viverra aliquet sit amet non mauris. Suspendisse potenti. Duis eu lectus sem. Maecenas aliquam erat vitae tortor congue ut imperdiet lacus consectetur. Praesent nisl ipsum, fermentum id venenatis eu, lobortis eu nunc. Fusce ut enim tellus, ac semper turpis. Proin in ante massa. Curabitur velit lacus, pharetra vel dapibus egestas, posuere quis dui. Morbi aliquet congue nisl, dictum fringilla velit dictum sed. Integer eu consequat nisl. Curabitur aliquam suscipit magna vel pharetra. Duis eget erat vel purus mattis dignissim. Donec mattis, nulla nec imperdiet scelerisque, leo elit tincidunt dui, eget ullamcorper tortor neque nec erat. Aliquam libero augue, suscipit vitae scelerisque vitae, rutrum vitae quam.")))
       (loop for p from 0 to (- paragraphs 1)
             do (insert (nth p lorems)))))
-
 #+end_src
 ** Recompile / cache everything that makes emacs faster
 #+begin_src emacs-lisp
   (defun recompile-dot-lisp ()
-     "Recompile emacs lisp code in emacs dotfiles directory"
-     (interactive)
-     (setq font-lock-verbose nil)
-     (setq byte-compile-verbose  nil)
-     (byte-recompile-directory (concat dotfiles-dir "vendor") 0)
-     (byte-recompile-directory (concat dotfiles-dir "elpa") 0)
-     (byte-recompile-directory (concat dotfiles-dir "themes") 0)
-     (byte-compile-file "~/.emacs-private.el")
-     (byte-compile-file (concat dotfiles-dir "init.el"))
-     (byte-compile-file (concat dotfiles-dir "thomasf-init.el"))
-     (byte-compile-file (concat dotfiles-dir "thomasf-org.el"))
-     (byte-compile-file (concat dotfiles-dir "thomasf-gui.el"))
-     (byte-compile-file (concat dotfiles-dir "thomasf-emacs.el"))
-     ;;(yas/compile-top-level-dir (concat dotfiles-dir "snippets"))
-     ;;(yas/compile-top-level-dir (concat dotfiles-dir "snippets-imported"))
-     (yas/recompile-all)
-     (byte-recompile-directory (concat dotfiles-dir "snippets") 0)
-     (byte-recompile-directory (concat dotfiles-dir "snippets-imported") 0))
+    "Recompile emacs lisp code in emacs dotfiles directory"
+    (interactive)
+    (setq font-lock-verbose nil)
+    (setq byte-compile-verbose  nil)
+    (byte-recompile-directory (concat dotfiles-dir "vendor") 0)
+    (byte-recompile-directory (concat dotfiles-dir "elpa") 0)
+    (byte-recompile-directory (concat dotfiles-dir "themes") 0)
+    (byte-compile-file "~/.emacs-private.el")
+    (byte-compile-file (concat dotfiles-dir "init.el"))
+    (byte-compile-file (concat dotfiles-dir "thomasf-init.el"))
+    (byte-compile-file (concat dotfiles-dir "thomasf-org.el"))
+    (byte-compile-file (concat dotfiles-dir "thomasf-gui.el"))
+    (byte-compile-file (concat dotfiles-dir "thomasf-emacs.el"))
+    ;;(yas/compile-top-level-dir (concat dotfiles-dir "snippets"))
+    ;;(yas/compile-top-level-dir (concat dotfiles-dir "snippets-imported"))
+    (yas/recompile-all)
+    (byte-recompile-directory (concat dotfiles-dir "snippets") 0)
+    (byte-recompile-directory (concat dotfiles-dir "snippets-imported") 0))
 #+end_src
-
-
 ** Tab/space/indent utilities
 #+begin_src emacs-lisp
-   (defun untabify-buffer ()
+  (defun untabify-buffer ()
     (interactive)
     (untabify (point-min) (point-max)))
 
@@ -610,8 +594,7 @@ This is only for x, I would guess.
 ** Comment/uncomment
 #+begin_src emacs-lisp
   (defun comment-or-uncomment-line (&optional lines)
-    "Comment current line. Argument gives the number of lines
-  forward to comment"
+    "Comment current line. Argument gives the number of lines forward to comment"
     (interactive "P")
     (comment-or-uncomment-region
      (line-beginning-position)
@@ -624,7 +607,6 @@ This is only for x, I would guess.
             (comment-or-uncomment-region (mark) (point))
           (comment-or-uncomment-region (point) (mark)))
       (comment-or-uncomment-line lines)))
-
 #+end_src
 ** Sudo edit
 #+begin_src emacs-lisp
@@ -648,8 +630,7 @@ This is only for x, I would guess.
 #+end_src
 
 ** Recentf-ido-find-file
-This is provided by other things I use
-#+begin_src emacs-lisp :tangle no
+#+begin_src emacs-lisp
   (defun recentf-ido-find-file ()
     "Find a recent file using ido."
     (interactive)
@@ -692,6 +673,7 @@ This is provided by other things I use
     ;;(table-recognize)
     ;;(turn-on-auto-fill)
     (turn-on-undo-tree-mode))
+
   (add-hook 'text-mode-hook 'my-textmode-hook)
 #+end_src
 *** Programming hook
@@ -722,7 +704,7 @@ This is provided by other things I use
     (turn-on-haskell-indentation)
     (rainbow-delimiters-mode)
     (eldoc-mode))
-  
+
   (add-hook 'haskell-mode-hook 'my-haskell-mode-hook)
 #+end_src
 *** CoffeeScript
@@ -759,38 +741,27 @@ This is provided by other things I use
 #+end_src
 *** TODO JavaScript
 
-TODO: maybe possible to do this in pretty-mode
 #+begin_src emacs-lisp
+  (font-lock-add-keywords
+   'js-mode `(("\\(function *\\)("
+               (0 (progn (compose-region (match-beginning 1) (match-end 1)
+                                         "ƒ")
+                         nil)))))
 
-#+end_src
+  (font-lock-add-keywords 'js-mode
+                          '(("\\<\\(FIX\\|TODO\\|FIXME\\|HACK\\|REFACTOR\\):"
+                             1 font-lock-warning-face t)))
 
-#+begin_src emacs-lisp
-(font-lock-add-keywords
- 'js-mode `(("\\(function *\\)("
-              (0 (progn (compose-region (match-beginning 1) (match-end 1)
-                                        "ƒ")
-                        nil)))))
+  (add-to-list 'auto-mode-alist '("\\.json$" . js-mode))
+  (setq js-indent-level 2)
 
-(font-lock-add-keywords 'js-mode
-                        '(("\\<\\(FIX\\|TODO\\|FIXME\\|HACK\\|REFACTOR\\):"
-                           1 font-lock-warning-face t)))
+  (defun my-js-mode-hook ()
+    "My js-mode hook"
+    ;; electric-layout-mode doesn't play nice with js-mode
+    (my-programming-hook)
+    (electric-layout-mode -1))
 
-(add-to-list 'auto-mode-alist '("\\.json$" . js-mode))
-(setq js-indent-level 2)
-
-(defun my-js-mode-hook ()
-  "My js-mode hook"
-  ;; electric-layout-mode doesn't play nice with js-mode
-  (my-programming-hook)
-  (electric-layout-mode -1)
-
-  ;; rainbow-delemiters-mode does not seem to work very well with js-mode
-  ;; (rainbow-delimiters-mode)
-
-  ;;(paredit-mode)
-  )
-
-(add-hook 'js-mode-hook 'my-js-mode-hook)
+  (add-hook 'js-mode-hook 'my-js-mode-hook)
 
 #+end_src
 *** TODO lisp
@@ -827,38 +798,37 @@ Disable slime for now
 
 
 #+begin_src emacs-lisp
+  (add-hook 'emacs-lisp-mode-hook 'eldoc-mode)
+  (add-hook 'emacs-lisp-mode-hook 'my-programming-hook)
+  (add-hook 'lisp-mode-hook 'my-programming-hook)
 
-    (add-hook 'emacs-lisp-mode-hook 'eldoc-mode)
-    (add-hook 'emacs-lisp-mode-hook 'my-programming-hook)
-    (add-hook 'lisp-mode-hook 'my-programming-hook)
-
-    (add-hook 'emacs-lisp-mode-hook 'emacs-lisp-remove-elc-on-save)
-    (add-hook 'emacs-lisp-mode-hook '(lambda () "rainbown-delimiters" (rainbow-delimiters-mode)))
+  (add-hook 'emacs-lisp-mode-hook 'emacs-lisp-remove-elc-on-save)
+  (add-hook 'emacs-lisp-mode-hook '(lambda () "rainbown-delimiters" (rainbow-delimiters-mode)))
 
   ;;  (when (functionp 'paredit-mode)
   ;;    (add-hook 'emacs-lisp-mode-hook (lambda () (paredit-mode +1)))
   ;;    (add-hook 'lisp-mode-hook (lambda () (paredit-mode +1))))
 
-    (defun emacs-lisp-remove-elc-on-save ()
-      "If you're saving an elisp file, likely the .elc is no longer valid."
-      (make-local-variable 'after-save-hook)
-      (add-hook 'after-save-hook
-                (lambda ()
-                  (if (file-exists-p (concat buffer-file-name "c"))
-                      (delete-file (concat buffer-file-name "c"))))))
+  (defun emacs-lisp-remove-elc-on-save ()
+    "If you're saving an elisp file, likely the .elc is no longer valid."
+    (make-local-variable 'after-save-hook)
+    (add-hook 'after-save-hook
+              (lambda ()
+                (if (file-exists-p (concat buffer-file-name "c"))
+                    (delete-file (concat buffer-file-name "c"))))))
 
-    (define-key lisp-mode-shared-map (kbd "C-c l") "lambda")
-    (define-key read-expression-map (kbd "TAB") 'lisp-complete-symbol)
-    (define-key lisp-mode-shared-map (kbd "RET") 'reindent-then-newline-and-indent)
-    (define-key lisp-mode-shared-map (kbd "C-\\") 'lisp-complete-symbol)
-    (define-key lisp-mode-shared-map (kbd "C-c v") 'eval-buffer)
+  (define-key lisp-mode-shared-map (kbd "C-c l") "lambda")
+  (define-key read-expression-map (kbd "TAB") 'lisp-complete-symbol)
+  (define-key lisp-mode-shared-map (kbd "RET") 'reindent-then-newline-and-indent)
+  (define-key lisp-mode-shared-map (kbd "C-\\") 'lisp-complete-symbol)
+  (define-key lisp-mode-shared-map (kbd "C-c v") 'eval-buffer)
 
-    (autoload 'scheme-get-current-symbol-info "scheme-complete" nil t)
-    (add-hook 'scheme-mode-hook
-      (lambda ()
-        (make-local-variable 'eldoc-documentation-function)
-        (setq eldoc-documentation-function 'scheme-get-current-symbol-info)
-        (eldoc-mode)))
+  (autoload 'scheme-get-current-symbol-info "scheme-complete" nil t)
+  (add-hook 'scheme-mode-hook
+            (lambda ()
+              (make-local-variable 'eldoc-documentation-function)
+              (setq eldoc-documentation-function 'scheme-get-current-symbol-info)
+              (eldoc-mode)))
 
 #+end_src
 *** PHP
@@ -867,15 +837,13 @@ Disable slime for now
 
   (add-to-list 'auto-mode-alist '("\\.php$" . php-mode))
 
-  (eval-after-load "php-mode"
-    '(progn
-       (defun my-php-mode-hook ()
-         "My php mode hook"
-         (my-programming-hook)
-         (flymake-php-load))
+  (defun my-php-mode-hook ()
+    "My php mode hook"
+    (my-programming-hook)
+    (flymake-php-load))
 
-       (add-hook 'php-mode-hook 'my-php-mode-hook)
-       ))
+  (add-hook 'php-mode-hook 'my-php-mode-hook)
+
 #+end_src
 *** Python
 #+begin_src emacs-lisp
@@ -893,8 +861,7 @@ Disable slime for now
     (electric-indent-mode -1)
     (require 'ac-python)
     (setq ac-sources '(ac-source-yasnippet))
-    (whitespace-mode)
-    )
+    (whitespace-mode))
 
   (add-hook 'python-mode-hook 'my-python-mode-hook)
 #+end_src
@@ -945,7 +912,7 @@ Disable slime for now
        (require 'eclim)))
 #+end_src
 ** Markup/text languages
-*** Multi web mode
+*** TODO Multi web mode
 
 #+begin_src emacs-lisp :tangle no
   (require 'multi-web-mode)
@@ -960,16 +927,15 @@ Disable slime for now
 
 *** CSS
 #+begin_src emacs-lisp
-(defun my-css-mode-hook ()
-  "My css-mode hook"
-  (my-programming-hook)
-  (if window-system (rainbow-mode)))
+  (defun my-css-mode-hook ()
+    "My css-mode hook"
+    (my-programming-hook)
+    (if window-system (rainbow-mode)))
 
+  (add-hook 'css-mode-hook 'my-css-mode-hook)
+  (setq css-indent-offset 3)
 
-(add-hook 'css-mode-hook 'my-css-mode-hook)
-(setq css-indent-offset 3)
-
-(add-to-list 'auto-mode-alist '("\\.css$" . css-mode))
+  (add-to-list 'auto-mode-alist '("\\.css$" . css-mode))
 #+end_src
 
 *** Markdown
@@ -989,25 +955,24 @@ Disable slime for now
     (define-key markdown-mode-map (kbd "<tab>") nil)
     ;(turn-on-auto-fill)
     (undo-tree-mode)
-    (artbollocks-mode)
-    )
+    (artbollocks-mode))
 
   (add-hook 'markdown-mode-hook 'my-markdown-mode-hook)
 #+end_src
 *** HTML
 #+begin_src emacs-lisp
-(add-to-list 'auto-mode-alist '("\\.html$" . html-mode))
-(add-to-list 'auto-mode-alist '("\\.rhtml$" . html-mode))
-(add-to-list 'auto-mode-alist '("\\.mustache$" . html-mode))
-(add-to-list 'auto-mode-alist '("\\.hb$" . html-mode))
+  (add-to-list 'auto-mode-alist '("\\.html$" . html-mode))
+  (add-to-list 'auto-mode-alist '("\\.rhtml$" . html-mode))
+  (add-to-list 'auto-mode-alist '("\\.mustache$" . html-mode))
+  (add-to-list 'auto-mode-alist '("\\.hb$" . html-mode))
 
-(defun my-html-mode-hook ()
-  "My html-mode-hook"
-  (my-programming-hook)
-  (zencoding-mode)
-  (setq ac-sources '(ac-source-yasnippet)))
+  (defun my-html-mode-hook ()
+    "My html-mode-hook"
+    (my-programming-hook)
+    (zencoding-mode)
+    (setq ac-sources '(ac-source-yasnippet)))
 
-(add-hook 'html-mode-hook 'my-html-mode-hook)
+  (add-hook 'html-mode-hook 'my-html-mode-hook)
 #+end_src
 
 *** YAML
@@ -1017,23 +982,21 @@ Disable slime for now
 ** Other modes
 *** Gitolite configuration files
 #+begin_src emacs-lisp
-(require 'gl-conf-mode)
-(add-to-list 'auto-mode-alist '("gitolite\\.conf\\'" . gl-conf-mode))
+  (require 'gl-conf-mode)
+  (add-to-list 'auto-mode-alist '("gitolite\\.conf\\'" . gl-conf-mode))
 
 #+end_src
 *** Git commit mode
 #+begin_src emacs-lisp
-(require 'git-commit)
-(add-hook 'git-commit-mode-hook 'turn-on-flyspell)
-(add-hook 'git-commit-mode-hook (lambda () (toggle-save-place 0)))
+  (require 'git-commit)
+  (add-hook 'git-commit-mode-hook 'turn-on-flyspell)
+  (add-hook 'git-commit-mode-hook (lambda () (toggle-save-place 0)))
 #+end_src
 *** GNUS
 #+begin_src emacs-lisp
-;; Make Gnus NOT ignore [Gmail] mailboxes
-(setq gnus-ignored-newsgroups "^to\\.\\|^[0-9. ]+\\( \\|$\\)\\|^[\"]\"[#'()]")
-
+  ;; Make Gnus NOT ignore [Gmail] mailboxes
+  (setq gnus-ignored-newsgroups "^to\\.\\|^[0-9. ]+\\( \\|$\\)\\|^[\"]\"[#'()]")
 #+end_src
-
 
 * ORGmode!
 ** TODO Orgmode
@@ -1283,7 +1246,7 @@ Inspirations:
 #+end_src
 *** Refile
 #+begin_src emacs-lisp :tangle thomasf-org.el
-  (setq org-refile-targets (quote ((org-agenda-files :level . 1))))
+  (setq org-refile-targets (quote ((org-agenda-files :level . 2))))
   (setq org-refile-use-outline-path (quote file))
 #+end_src
 *** Todo
@@ -1303,7 +1266,6 @@ Inspirations:
                 ("TODO" ("waiting") ("cancelled") ("hold"))
                 ("NEXT" ("waiting") ("cancelled") ("hold"))
                 ("DONE" ("waiting") ("cancelled") ("hold")))))
-
 #+end_src
 *** Default tags
 #+begin_src emacs-lisp :tangle thomasf-org.el
@@ -1342,12 +1304,10 @@ Inspirations:
 #+end_src
 *** Clocking
 #+begin_src emacs-lisp :tangle thomasf-org.el
-;;Resume clock when the agenda is loaded
- (eval-after-load "org-agenda"
+  ;;Resume clock when the agenda is loaded
+  (eval-after-load "org-agenda"
     '(progn
-
-(org-clock-persistence-insinuate)
-))
+       (org-clock-persistence-insinuate)))
   ;; Clocking
   ;;
   ;; Resume clocking task when emacs is restarted
@@ -1375,13 +1335,10 @@ Inspirations:
   (setq org-clock-auto-clock-resolution (quote when-no-clock-is-running))
   ;; Include current clocking task in clock reports
   (setq org-clock-report-include-clocking-task t)
-
-
 #+end_src
 ** Integrations
 *** yasnippet
 #+begin_src emacs-lisp :tangle thomasf-org.el
-
   (defun yas/org-very-safe-expand ()
     (let ((yas/fallback-behavior 'return-nil)) (yas/expand)))
 
@@ -1404,7 +1361,6 @@ Inspirations:
           (sh . t)
           (python . t)
           (emacs-lisp . t)))))
-
 #+end_src
 
 *** Configure babel execution!
@@ -1418,7 +1374,6 @@ To me, the following feels a bit slow and/or confusing).. Use [C-c '] instead.
   (setq org-src-fontify-natively t)
   (setq org-src-tab-acts-natively t)
 #+end_src
-
 ** Support functions
 #+begin_src emacs-lisp :tangle thomasf-org.el
   (defun open-index-notes ()
@@ -1429,7 +1384,7 @@ To me, the following feels a bit slow and/or confusing).. Use [C-c '] instead.
 ** MAJOR block'o'code
 
 #+begin_src emacs-lisp :tangle thomasf-org.el
-(defun bh/find-project-task ()
+  (defun bh/find-project-task ()
     "Move point to the parent (project) task if any"
     (save-restriction
       (widen)
@@ -1454,20 +1409,15 @@ To me, the following feels a bit slow and/or confusing).. Use [C-c '] instead.
   ;;   )
 
 
+  ;; Allow setting single tags without the menu
+  ;; (setq org-fast-tag-selection-single-key (quote expert))
 
 
-  ; Allow setting single tags without the menu
-  ; (setq org-fast-tag-selection-single-key (quote expert))
-
-
-  ; DIsable orgmode default stuck projects ist
+  ;; DIsable orgmode default stuck projects ist
   (setq org-stuck-projects (quote ("" nil nil "")))
 
-  ; Disable priorities
-  ; (setq org-enable-priority-commands nil)
-
-
-
+  ;; Disable priorities
+  ;; (setq org-enable-priority-commands nil)
 
 
   ;; enable flyspell for all org-mode buffers
@@ -1507,7 +1457,7 @@ To me, the following feels a bit slow and/or confusing).. Use [C-c '] instead.
 
   (defun bh/is-project-subtree-p ()
     "Any task with a todo keyword that is in a project subtree.
-  Callers of this function already widen the buffer view."
+    Callers of this function already widen the buffer view."
     (let ((task (save-excursion (org-back-to-heading 'invisible-ok)
                                 (point))))
       (save-excursion
@@ -1544,7 +1494,7 @@ To me, the following feels a bit slow and/or confusing).. Use [C-c '] instead.
 
   (defun bh/list-sublevels-for-projects-indented ()
     "Set org-tags-match-list-sublevels so when restricted to a subtree we list all subtasks.
-    This is normally used by skipping functions where this variable is already local to the agenda."
+      This is normally used by skipping functions where this variable is already local to the agenda."
     (if (marker-buffer org-agenda-restrict-begin)
         (setq org-tags-match-list-sublevels 'indented)
       (setq org-tags-match-list-sublevels nil))
@@ -1552,14 +1502,11 @@ To me, the following feels a bit slow and/or confusing).. Use [C-c '] instead.
 
   (defun bh/list-sublevels-for-projects ()
     "Set org-tags-match-list-sublevels so when restricted to a subtree we list all subtasks.
-    This is normally used by skipping functions where this variable is already local to the agenda."
+      This is normally used by skipping functions where this variable is already local to the agenda."
     (if (marker-buffer org-agenda-restrict-begin)
         (setq org-tags-match-list-sublevels t)
       (setq org-tags-match-list-sublevels nil))
     nil)
-
-
-
 #+end_src
 
 ** TODO clocking
@@ -1648,7 +1595,6 @@ leaving this untangeled for now, not sure if I even want clocking at all
       (bh/clock-in-parent-task)))
 
   (add-hook 'org-clock-out-hook 'bh/clock-out-maybe 'append)
-
 #+end_src
 
 * Key bindings
@@ -1656,8 +1602,8 @@ leaving this untangeled for now, not sure if I even want clocking at all
 *** Unbind keys
 This is very specific to how and what I do to my caps-lock key.
 #+begin_src emacs-lisp
-(define-key special-event-map (kbd "<key-17>") 'ignore)
-(define-key special-event-map (kbd "<M-key-17>") 'ignore)
+  (define-key special-event-map (kbd "<key-17>") 'ignore)
+  (define-key special-event-map (kbd "<M-key-17>") 'ignore)
 #+end_src
 *** Common
 #+begin_src emacs-lisp
@@ -1682,52 +1628,52 @@ This is very specific to how and what I do to my caps-lock key.
 
 *** Window navigation
 #+begin_src emacs-lisp
-(windmove-default-keybindings)
+  (windmove-default-keybindings)
 #+end_src
 *** Window resizing
 #+begin_src emacs-lisp
-(global-set-key (kbd "S-C-<left>")   'shrink-window-horizontally)
-(global-set-key (kbd "S-C-<right>")  'enlarge-window-horizontally)
-(global-set-key (kbd "S-C-<down>")   'shrink-window)
-(global-set-key (kbd "S-C-<up>")     'enlarge-window)
+  (global-set-key (kbd "S-C-<left>")   'shrink-window-horizontally)
+  (global-set-key (kbd "S-C-<right>")  'enlarge-window-horizontally)
+  (global-set-key (kbd "S-C-<down>")   'shrink-window)
+  (global-set-key (kbd "S-C-<up>")     'enlarge-window)
 #+end_src
 *** Searching
 #+begin_src emacs-lisp
-(global-set-key (kbd "C-s")      'isearch-forward-regexp)
-(global-set-key (kbd "C-r")      'isearch-backward-regexp)
-(global-set-key (kbd "C-M-s")    'isearch-forward)
-(global-set-key (kbd "C-M-r")    'isearch-backward)
-; This navigates search results and error
-(global-set-key (kbd "<M-prior>") 'previous-error)
-(global-set-key (kbd "<M-next>")  'next-error)
+  (global-set-key (kbd "C-s")      'isearch-forward-regexp)
+  (global-set-key (kbd "C-r")      'isearch-backward-regexp)
+  (global-set-key (kbd "C-M-s")    'isearch-forward)
+  (global-set-key (kbd "C-M-r")    'isearch-backward)
+  ; This navigates search results and error
+  (global-set-key (kbd "<M-prior>") 'previous-error)
+  (global-set-key (kbd "<M-next>")  'next-error)
 #+end_src
 *** TODO Proper delete functionality
 #+begin_src emacs-lisp :tangle no
-(global-set-key (kbd "<backspace>") 'backward-kill-word)
-(global-set-key (kbd "C-<backspace>") 'backward-delete-char)
+  (global-set-key (kbd "<backspace>") 'backward-kill-word)
+  (global-set-key (kbd "C-<backspace>") 'backward-delete-char)
 #+end_src
 
 *** Replace basic emacs functionality
 
 #+begin_src emacs-lisp
-(global-set-key (kbd "M-x") 'smex)
-(global-set-key (kbd "M-X") 'smex-major-mode-commands)
-;; This is your old M-x.
-(global-set-key (kbd "C-c C-c M-x") 'execute-extended-command)
+  (global-set-key (kbd "M-x") 'smex)
+  (global-set-key (kbd "M-X") 'smex-major-mode-commands)
+  ;; This is your old M-x.
+  (global-set-key (kbd "C-c C-c M-x") 'execute-extended-command)
 #+end_src
 
 #+begin_src emacs-lisp :tangle thomasf-gui.el
-(global-set-key "\C-x\C-c" 'intelligent-close)
+  (global-set-key "\C-x\C-c" 'intelligent-close)
 #+end_src
 
 *** Isearch opccur
 #+begin_src emacs-lisp
-(define-key isearch-mode-map (kbd "C-o") 'isearch-occur)
+  (define-key isearch-mode-map (kbd "C-o") 'isearch-occur)
 #+end_src
 
 ** org-mode
 #+begin_src emacs-lisp :tangle thomasf-org.el
-(define-key global-map "\C-cl" 'org-store-link)
-(define-key global-map "\C-ca" 'org-agenda)
-(global-set-key (kbd "C-M-r") 'org-capture)
+  (define-key global-map "\C-cl" 'org-store-link)
+  (define-key global-map "\C-ca" 'org-agenda)
+  (global-set-key (kbd "C-M-r") 'org-capture)
 #+end_src
